@@ -66,7 +66,7 @@ Follow symlinks. Default is false.
 removes items found which have identical inode and device ID. Default
 is true.
 .IP "-checksum md5|sha1|sha256"
-what type of checksum to be used: md5, sha1 or sha256. The default is md5.
+what type of checksum to be used: md5, sha1 or sha256. The default is sha1 since version 1.4.0.
 .PP
 .B Action options:
 .IP "-makesymlinks true|false"
