@@ -9,6 +9,7 @@
 	* added option -minsize to optionally ignore files under a
 	  certain size. See Github bug #1
 	* add sha256 support - see Debian Bug 815120 and Github #7
+	  the default checksum is now sha1 instead of md5
 2017-01-04 Paul Dreik <rdfind@pauldreik.se>
 	* release 1.3.5
 	* source cleanup like removing obsolete comments, formatting.
